project(1-6)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_COMPILER clang++)
aux_source_directory(src/ SRC_LIST)
file(COPY "sample.png" DESTINATION ${CMAKE_BINARY_DIR})
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMakeInclude/)
find_package(GLEW REQUIRED   )
find_package(OpenGL REQUIRED )
find_package(SDL2 REQUIRED   )
find_package(SDL2_image REQUIRED )
find_package(SFML REQUIRED system window graphics network audio )
#https://github.com/LaurentGomila/SFML/wiki/Tutorial:-Build-your-SFML-project-with-CMake
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -g")
INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIRECTORY} ${OpenGL_INCLUDE_DIRECTORY} ${SDL2_INCLUDE_DIRECTORY} ${SFML_INCLUDE_DIR} ${SDL2IMAGE_INCLUDE_DIR})
add_executable(${PROJECT_NAME} ${SRC_LIST})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GLEW_LIBRARIES} ${SDL2_LIBRARY} ${OPENGL_LIBRARY} ${SFML_LIBRARIES} ${SDL2IMAGE_LIBRARY})
